k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-api
  labels:
    name: web-api
    managed-by: terraform
